appId: org.scottishtecharmy.soundscape
---
- launchApp:
    clearState: false

- runFlow:
    file: WaitForScreen.yaml
    env:
          screen: Home

- tapOn:
    id: homePlacesNearby
- tapOn:
    id: placesNearby-0


- runFlow:
    file: SwipeAndTap.yaml
    env:
      id: placesNearby-8

- tapOn:
    id: appBarLeft
- tapOn:
    id: appBarLeft

- tapOn:
    id: placesNearby-1
- tapOn:
    id: appBarLeft
- tapOn:
    id: placesNearby-2
- tapOn:
    id: appBarLeft
- tapOn:
    id: placesNearby-3
- tapOn:
    id: appBarLeft
- tapOn:
    id: placesNearby-4
- tapOn:
    id: appBarLeft
- tapOn:
    id: placesNearby-5
- tapOn:
    id: appBarLeft

